Change styles, mess around

--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,24 @@
 # Site Settings
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+name: Echoplay
+title: Echoplay | Έλα να παίξουμε μαζί!
+description: Το Echoplay είναι ένας ιστότοπος όπου βρισκόμαστε για να παίξουμε, να συζητήσουμε και να διασκεδάσουμε! Από τη Νικολέττα Χαλδαιοπούλου.
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-show_hero: true
+show_hero: false
 menu:
-  - title: Home
+  - title: Αρχική
     url: /
-  - title: About
+  - title: Σχετικά
     url: /about
-  - title: Contact
+  - title: Επικονωνία
     url: /contact
-  - title: Feed
+  - title: Ροή
     url: /feed.xml
-email: youremail@test.com
+email: n.chaldeopoulou@gmail.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
@@ -45,13 +44,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
-google_analytics: "UA-XXXXXXXX-X"
-language: "en"
-categories_folder: category
-sent_message_url: "/contact/message-sent/"
-
+=include advanced.yml
 
 # Build settings
 markdown: kramdown
