--- a/src/yml/theme.yml
+++ b/src/yml/theme.yml
@@ -1,5 +1,6 @@
 themeColor: '#ff0a16'
-primaryDark: '#141414'
+primaryDark: '#ffea90'
 accentDark: '#ffffff'
 lightGray: '#f2f2f2'
 texts: '#333333'
+backgroundLight: '#ffea90'
