--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-name: Echoplay
-title: Echoplay | Έλα να παίξουμε μαζί!
+name: Echo Play
+title: Echo Play | Έλα να παίξουμε μαζί!
 description: Το Echoplay είναι ένας ιστότοπος όπου βρισκόμαστε για να παίξουμε, να συζητήσουμε και να διασκεδάσουμε! Από τη Νικολέττα Χαλδαιοπούλου.
 tags:
   - blog
@@ -20,10 +20,10 @@ menu:
     url: /feed.xml
 email: n.chaldeopoulou@gmail.com
 # See: https://disqus.com/
-disqus_username: disqus_username
+# disqus_username: disqus_username
 # Contact Form Setting
 # See: https://formspree.io/
-formspree_form_id: formspree_form_id
+# formspree_form_id: formspree_form_id
 
 
 # Social Media Settings
@@ -44,7 +44,13 @@ two_columns_layout: true
 
 
 # Advanced Settings
-=include advanced.yml
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
+google_analytics: "UA-XXXXXXXX-X"
+language: "gr"
+categories_folder: category
+sent_message_url: "/contact/message-sent/"
+
 
 # Build settings
 markdown: kramdown
