--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,5 +1,5 @@
-name: Echoplay
-title: Echoplay | Έλα να παίξουμε μαζί!
+name: Echo Play
+title: Echo Play | Έλα να παίξουμε μαζί!
 description: Το Echoplay είναι ένας ιστότοπος όπου βρισκόμαστε για να παίξουμε, να συζητήσουμε και να διασκεδάσουμε! Από τη Νικολέττα Χαλδαιοπούλου.
 tags:
   - blog
@@ -19,7 +19,7 @@ menu:
     url: /feed.xml
 email: n.chaldeopoulou@gmail.com
 # See: https://disqus.com/
-disqus_username: disqus_username
+# disqus_username: disqus_username
 # Contact Form Setting
 # See: https://formspree.io/
-formspree_form_id: formspree_form_id
+# formspree_form_id: formspree_form_id
